[package]
name = "rsblkid-sys"
description = "Raw FFI bindings to the `util-linux/libblkid` C library"
version = "0.2.2"
authors = ["Nick Piaddo <nick.piaddo@protonmail.com>"]
license = "Apache-2.0 OR MIT"
rust-version = "1.72"
edition = "2021"
repository = "https://github.com/nickpiaddo/rsblkid-sys"
homepage = "https://github.com/nickpiaddo/rsblkid-sys"
documentation = "https://docs.rs/rsblkid-sys"
readme = "crates-io.md"
keywords = ["bindings", "ffi", "libblkid"]
categories = ["external-ffi-bindings", "os"]
exclude = ["web-snapshots/*"]
build = "build/build.rs"
links = "blkid"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[build-dependencies]
bindgen = "0.66.1"
cc = "1.1.28"
pkg-config = "0.3.30"
